<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <TextView
        style="@style/titulo"
        android:text="@string/app_name" />

    <RelativeLayout
        style="@style/ItemMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alwaysDrawnWithCache="false"
        android:background="@color/azul">

        <TextView
            android:id="@+id/viewNovoGasto"
            style="@style/ItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:drawableTop="@drawable/novo_gasto"
            android:text="@string/novoGasto" />

        <TextView
            android:id="@+id/viewNovaViagem"
            style="@style/ItemMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/viewNovoGasto"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:drawableTop="@drawable/nova_viagem"
            android:text="Nova Viagem" />

        <TextView
            android:id="@+id/MinhasViagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/viewNovoGasto"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:text="@string/minhasViagens"
            style="@style/ItemMenu"
            android:drawableTop="@drawable/minhas_viagens"/>

        <TextView
            android:id="@+id/viewConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/viewNovaViagem"
            android:layout_alignBottom="@id/MinhasViagens"
            android:text="@string/config"
            style="@style/ItemMenu"
            android:drawableTop="@drawable/configuracoes"/>


    </RelativeLayout>


</LinearLayout>

